Adding config options to keep the Git credentials

--- a/.properties
+++ b/.properties
@@ -4,6 +4,7 @@ svn.password=
 svn.branches=branches
 svn.tags=tags
 svn.trunk=trunk
-git.host=https://git.bowmansystems.net
+git.host=git.bowmansystems.net
+git.protocol=https
 git.user=jcastrillon
 git.password=
